--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4300,6 +4300,8 @@ pre#question-body {
     padding-left: 10px;
     font-weight: 500;
     font-size: 14px;
+    width: fit-content;
+    width: -moz-fit-content;
 }
 
 .divide__line .__line {
