add feedback to expert

--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     <link rel="stylesheet" href="{% static 'css/comments.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
@@ -31,6 +32,32 @@
 {#  {% include 'expert/layouts/pageLoader.html' %}#}
 {% block dialog %}{% endblock %}
 {% block modals %}{% endblock %}
+<div class="modal fade" id="feedbackModal" data-backdrop="static" data-keyboard="false" tabindex="-1"
+     role="dialog" aria-labelledby="feedbackModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="feedbackModalLabel">ثبت بازخورد</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form action="{% url 'chamran:addOpinion' %}" id="feedback_ajax_form">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="feedbackEmail">پست الکترونیکی</label>
+                        <input type="email" class="form-control" id="feedbackEmail" aria-describedby="emailHelp">
+                    </div>
+                    <div class="form-group">
+                        <label for="feedbackOpinion">متن مشکل</label>
+                        <textarea class="form-control" id="feedbackOpinion" rows="4"></textarea>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">ارسال</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <div class="main">
     <div class="top-bar">
         <img src="{% static 'expert/img/logoName.png' %}" alt="chamranTeam">
@@ -52,6 +79,11 @@
                 <hr>
                 <li><a href="{% url 'chamran:logout' %}">خروج<i class="fas fa-sign-out-alt"></i></a></li>
             </ul>
+        </div>
+        <div class="feed-back">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#feedbackModal">
+                <i class="fas fa-edit"></i>
+            </button>
         </div>
         <a href="#" id="toggle"><span></span></a>
     </div>
@@ -203,5 +235,31 @@
         display_error($("#exampleModal form"));
     </script>
 {% endif %}
+<script type="text/javascript">
+    $("form#feedback_ajax_form").submit(function (event) {
+        event.preventDefault();
+        $.ajax({
+            method: "POST",
+            url: $(this).attr("action"),
+            data: $(this).serialize(),
+            success: function (data) {
+                console.log(data);
+                iziToast.success({
+                    rtl: true,
+                    message: "بازخورد شما با موفقیت ارسال شد!",
+                    position: 'bottomLeft'
+                });
+            },
+            error: function (data) {
+                console.log(data);
+                iziToast.error({
+                    rtl: true,
+                    message: "ارسال بازخورد با خطا مواجه شد!",
+                    position: 'bottomLeft'
+                });
+            }
+        });
+    });
+</script>
 </body>
 </html>
