--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -44,11 +44,11 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="feedbackEmail">پست الکترونیکی</label>
-                        <input type="email" class="form-control" id="feedbackEmail" aria-describedby="emailHelp">
+                        <input type="email" name='email' class="form-control" id="feedbackEmail" aria-describedby="emailHelp">
                     </div>
                     <div class="form-group">
                         <label for="feedbackOpinion">متن مشکل</label>
-                        <textarea class="form-control" id="feedbackOpinion" rows="4"></textarea>
+                        <textarea name='opinion' class="form-control" id="feedbackOpinion" rows="4"></textarea>
                     </div>
                 </div>
                 <div class="modal-footer">
