--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'theme-ct/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'theme-ct/css/res.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     {#	<link rel="shortcut icon" href="{{$setting->icon}}"/>#}
     {% block head %}{% endblock %}
 </head>
@@ -67,15 +69,23 @@
         </div>
         <div class="col-md-5">
             {#            {!! Form::open(['url'=>route('contact-us-post'),'id'=>'contact-us-post']) !!}#}
-            <div class="contact-us">
-                <h2>تماس با ما</h2>
-                <input type="text" name="name" class="form-control" placeholder="نام و نام خانوادگی">
-                <input type="text" name="email" class="form-control" placeholder="پست الکترونیک">
-                <textarea name="message" class="form-control" rows="5" placeholder="پیام شما"></textarea>
-                <button type="submit" id="submit" class="btn btn-contact">ارسال</button>
-            </div>
+            <form id="contactUs_form" method="POST">
+                {% csrf_token %}
+                <div class="contact-us">
+                    <h2>تماس با ما</h2>
+                    <div class='fullname'></div>
+                        <input type="text" name="fullname" id='fullname' class="form-control" placeholder="نام و نام خانوادگی">
+                    {% comment %} </div> {% endcomment %}
+                    <div class="email"></div>
+                        <input type="text" name="email" id="email" class="form-control" placeholder="پست الکترونیک">
+                    <div class="context"></div>
+                        <textarea name="context" id='context' class="form-control" rows="5" placeholder="پیام شما"></textarea>
+                    {% comment %} </div> {% endcomment %}
+                    <button type="submit" id="submit" class="btn btn-contact">ارسال</button>
+                </div>
             <span id="Loader">منتظر بمانید...</span>
             <div id="res" class="margin-20"></div>
+            </form>
             {#            {!! Form::close() !!}#}
         </div>
     </div>
@@ -152,6 +162,8 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+<script type="text/javascript"
+        src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 <script type="text/javascript">
     $('#navicon').click(function () {
         $('#nav').slideToggle();
@@ -224,6 +236,69 @@
             }
         });
     }));
+    let contactForm = $("#contactUs_form");
+    contactForm.submit(function (event) {
+        $(".loading").css('display', "block");
+        $(".owl-carousel").css('display', "none");
+        event.preventDefault();
+        $(".email").find("div.error").remove();
+        $("input#email").removeClass("error").css("color", "").prev().css("color", "");
+        $("input#fullname").removeClass("error").css("color", "").prev().css("color", "");
+        $(".fullname").find("div.error").remove();
+        $("input#context").removeClass("error").css("color", "").prev().css("color", "");
+        $(".context").find("div.error").remove();
+        
+        $.ajax({
+            method: 'POST',
+            url: "/contactUs/",
+            dataType: 'json',
+            data: $(this).serialize().toString(),
+            success: function(data){
+                contactForm[0].reset();
+                {% comment %} iziToast.success({
+                    rtl: true,
+                    message: "پیام شما با موفقیت ارسال شد.",
+                    position: 'bottomLeft'
+                }); {% endcomment %}
+            },
+            error: function(data){
+                $(".loading").css('display', "none");
+                $(".owl-carousel").css('display', "block");
+                let obj = JSON.parse(data.responseText);
+                if (obj.email !== undefined) {
+                    $(".email").append("<div class='error'>" +
+                        "<span class='error-body'>" +
+                        "<ul class='errorlist'>" +
+                        "<li>" + obj.email + "</li>" +
+                        "</ul>" +
+                        "</span>" +
+                        "</div>");
+                    $("input#email").addClass("error").css("color", "rgb(255, 69, 69)").prev().css("color", "rgb(255, 69, 69)");
+                }
+                if (obj.fullname !== undefined) {
+                    $(".fullname").append("<div class='error'>" +
+                        "<span class='error-body'>" +
+                        "<ul class='errorlist'>" +
+                        "<li>" + obj.fullname + "</li>" +
+                        "</ul>" +
+                        "</span>" +
+                        "</div>");
+                    $("input#fullname").addClass("error").css("color", "rgb(255, 69, 69)").prev().css("color", "rgb(255, 69, 69)");
+                }
+                if (obj.context !== undefined) {
+                    $(".context").append("<div class='error'>" +
+                        "<span class='error-body'>" +
+                        "<ul class='errorlist'>" +
+                        "<li>" + obj.context + "</li>" +
+                        "</ul>" +
+                        "</span>" +
+                        "</div>");
+                    $("input#context").addClass("error").css("color", "rgb(255, 69, 69)").prev().css("color", "rgb(255, 69, 69)");
+                }
+            }
+        })
+    });
+
 </script>
 
 {% block foot %}{% endblock %}
