--- a/static/researcher/css/style.css
+++ b/static/researcher/css/style.css
@@ -1514,7 +1514,7 @@ input.vote-select[value='5'] + label:hover, input.vote-select[value='5']:checked
     -moz-border-radius: 0 0 5px 5px;
     border-radius: 0 0 5px 5px;
     padding: 10px 0;
-    direction: ltr!important;
+    direction: ltr !important;
 }
 
 .modal .all-techniques:before {
@@ -1844,4 +1844,73 @@ button.start-question {
 
 .file-type.image.zip {
     background-image: url("../../../static/img/zip.svg");
+}
+
+.dots-timer {
+    color: #707070;
+}
+
+.dots-timer .timer-item {
+    min-width: 300px;
+    min-height: 300px;
+}
+
+.dots-timer .timer-item .circle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+}
+
+.dots-timer .timer-item .circle .circle-value {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 40px;
+    font-weight: 900;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.dots-timer .timer-item .circle .circle-dot {
+    position: absolute;
+    width: 6px;
+    height: 6px;
+    border: 1px solid #707070;
+    background-color: #ffffff;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.dots-timer .timer-item .circle .circle-dot.active {
+    border: 1px solid #3CCD1C;
+    background-color: #3CCD1C;
+}
+
+.dots-timer .timer-item .circle .circle-dot.blink {
+    border: 1px solid #3CCD1C;
+    background-color: #3CCD1C;
+  -webkit-animation-name: blinker;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: ease-in-out;
+  -webkit-animation-direction: alternate;
+}
+
+@-webkit-keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
