debug captcha code and email tooltip

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -73,7 +73,7 @@
                         <div class="account_error"></div>
                         <div class="email input-compact">
                             <label for="email">پست الکترونیکی</label>
-                            {{ register_form.email|attr:"id:email"|attr:"class:w-100"|attr:"placeholder:example@domain.com"|attr:"data-toggle:tooltip"|attr:"data-html:true"|attr:"title:<h6>توجه!</h6>پس از ثبت نام این ایمیل نام کاربری شما خواهد بود و به هیچ وجه قابل تغییر نیست، فلذا ایمیل معتبری را در اینجا وارد کنید. <p></p>" }}
+                            {{ register_form.email|attr:"id:email"|attr:"class:w-100"|attr:"placeholder:example@domain.com"|attr:"data-toggle:tooltip"|attr:"data-html:true"|attr:"title:<h6 dir='rtl'>توجه!</h6><p style='text-align: justify;direction:rtl'>پس از ثبت نام این ایمیل نام کاربری شما خواهد بود و به هیچ وجه قابل تغییر نیست، فلذا ایمیل معتبری را در اینجا وارد کنید</p>" }}
                             <i class="fas fa-at fa-lg"></i>
                         </div>
                         <div class="captcha-test">
